<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:title="@string/menu_inbox"
            android:id="@+id/menu_inbox"
            android:icon="@drawable/ic_inbox"/>

        <item android:title="@string/menu_favoritos"
              android:id="@+id/menu_favoritos"
            android:icon="@drawable/ic_favoritos"/>

        <item android:title="@string/menu_sent_emails"
              android:id="@+id/menu_sent_email"
            android:icon="@drawable/ic_sent_mail"/>
    </group>

    <item android:title="@string/menu_others"
        android:id="@+id/submenu_outors">
        <menu>

            <item android:title="@string/menu_trash"
                android:id="@+id/menu_trash"
                android:icon="@drawable/ic_trash"/>

            <item android:title="@string/menu_spam"
                android:id="@+id/menu_spam"
                android:icon="@drawable/ic_spam"/>

        </menu>
    </item>
</menu>